<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Eventos">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/btnEventos"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView33"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/lblIdEvento" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/lblTipoEvento" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDescripcionEvento" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="488dp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listviewEventos"
                    android:layout_width="491dp"
                    android:layout_height="373dp">

                </ListView>

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btnCrearEvento"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="CrearEvent"
            android:text="@string/btnCrear" />

    </LinearLayout>

</LinearLayout>