<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="Reportes"
    android:orientation="vertical"
    tools:context=".Inicio">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/lblHermandad"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="59dp" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="476dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBienvenido"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNombreU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoText="false"
                android:gravity="center"
                android:text="@string/lblNombre"
                android:textColor="#4A4747"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnChat"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/btnChat"
                android:textStyle="bold"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btnReportes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="Reportes"
                android:text="@string/btnReportes"
                android:textStyle="bold"
                app:backgroundTint="#FF9800" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEventos"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="Eventos"
                android:text="@string/btnEventos"
                android:textStyle="bold"
                app:backgroundTint="#FF9800" />

            <Button
                android:id="@+id/btnPerfil"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="Perf"
                android:text="@string/btnPerfil"
                android:textStyle="bold"
                app:backgroundTint="#FF9800" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLlamarEmer"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btnLlamarEmergencias"
                android:textStyle="bold"
                app:backgroundTint="#F63C3C" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>