<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/lblHermandad"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@mipmap/logo" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="Iniciar_Sesion"
        android:paddingTop="4dp"
        android:text="@string/btnLogIn"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:onClick="Registro"
        android:text="@string/btnSignIn"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>